--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 # List all python libraries for the lambda
-tensorflow==2.4.0
-tensorflow_hub==0.11
+tensorflow==2.9.0
+tensorflow_hub==0.12.0
+pandas
+keras==2.9.0
